# void

./: .env  Cargo.toml  DESIGN.md  adjectives.csv  adjectives.txt  dbmate.sh  docker-compose.yml  localdb.sh  nouns.csv  nouns.txt  tmux.sh
db/: schema.sql
migrations/: 20221002135748_initial_schema.sql
src/: lib.rs  main.rs  sign.rs
src/core/: user.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: api.ts  dom.ts  main.ts  shout.ts  void.ts
ui/src/components/: commentButton.ts
ui/src/things/: shout.ts
ui/styles/: main.scss
