[package]
name = "void"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0"
axum = { version = "0.5.15", features = [ "multipart" ] }
base64 = "0.13.0"
chrono = { version = "0.4", features = [ "serde" ] }
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10.6"
sqlx = { version = "0.6", features = [ "postgres", "json", "runtime-tokio-rustls", "uuid", "chrono", "offline" ] }
# thiserror = "1.0"
tokio = { version = "1.21.1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.1.2", features = [ "v4", "fast-rng", "serde" ] }
